fix: update Crowdin config for Chinese locales and add missing l10n keys
- Change crowdin.yml to use %locale_with_underscore% for proper zh_CN/zh_TW handling
- Add sectionLanguage, appearanceLanguage, appearanceLanguageSubtitle to app_en.arb
- Add app_zh_CN.arb for Simplified Chinese (Crowdin target)
- Update .gitignore to exclude log files and tool/ folder
- Regenerate localization dart files

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1054,7 +1054,13 @@
   "sectionTheme": "Theme",
   "@sectionTheme": {"description": "Settings section header"},
   "sectionLayout": "Layout",
-  "@sectionLayout": {"description": "Settings section header"},
+"@sectionLayout": {"description": "Settings section header"},
+  "sectionLanguage": "Language",
+  "@sectionLanguage": {"description": "Settings section header for language"},
+  "appearanceLanguage": "App Language",
+  "@appearanceLanguage": {"description": "Language setting title"},
+  "appearanceLanguageSubtitle": "Choose your preferred language",
+  "@appearanceLanguageSubtitle": {"description": "Language setting subtitle"},
 
   "settingsAppearanceSubtitle": "Theme, colors, display",
   "@settingsAppearanceSubtitle": {"description": "Appearance settings description"},
