feat: block duplicate downloads for tracks in local library
- Add local library check before downloading in all screens
- Show 'Already exists in your library' snackbar when track is found
- Add 'In Library' badge to track items in album and playlist screens
- Update home_tab, album_screen, playlist_screen, artist_screen
- Add snackbarAlreadyInLibrary localization string

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -672,6 +672,13 @@
       "trackName": {"type": "String"}
     }
   },
+  "snackbarAlreadyInLibrary": "\"{trackName}\" already exists in your library",
+  "@snackbarAlreadyInLibrary": {
+    "description": "Snackbar - track already exists in local library",
+    "placeholders": {
+      "trackName": {"type": "String"}
+    }
+  },
   "snackbarHistoryCleared": "History cleared",
   "@snackbarHistoryCleared": {"description": "Snackbar - history deleted"},
   "snackbarCredentialsSaved": "Credentials saved",
